--- a/week_06/index.html
+++ b/week_06/index.html
@@ -21,7 +21,7 @@
         <div style="font-size: 5cm;font-family: 'Saira Stencil One', cursive;">
             Error Code 404
         </div>
-        <div style="width: 50%;
+        <div style="width: 48%;
                     display: inline-block">
             <img src="Anjing 2.jpg"
             style="width: 100%">
@@ -37,10 +37,23 @@
         <div>
             <div>
                 <img style="width: 48%" src="./img/Anjing.jpg" alt="Anjing Bekerja">
-                Doge profesional yang bekerja sebagai arsitek pembangunan</div>
+                    <div style="width: 38%;
+                                display: inline-block;
+                                font-size: 1.5em;
+                                font-family: 'Indie Flower', cursive">
+                        Doge profesional yang bekerja sebagai arsitek pembangunan
+
+                    </div>
+                </div>
             <div>
                 <img style="width: 48%" src="./img/Anjing 3.jpg" alt="Santui Dong">
-                Doge sedang santai setelah kelelahan bekerja</div>
+                    <div style="width: 38%;
+                                display:inline-block;
+                                font-size: 1.5em;
+                                font-family: 'Indie Flower', cursive">
+                        Doge sedang santai setelah kelelahan bekerja
+                    </div> 
+            </div>
         
             </div>
 
@@ -52,5 +65,6 @@
 
        
     </div>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/0YF8vecQWYs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 </html>
