--- a/week_06/index.html
+++ b/week_06/index.html
@@ -11,7 +11,7 @@
     <title>ANJENG ASU</title>
 </head>
 <body>
-    <div class="header">
+    <div style="font-size: 2em" class="header">
         Logo
         <a href="www.google.com">Google</a>
         <a href="www.youtube.com">Youtube</a>
@@ -58,12 +58,9 @@
             </div>
 
         <div>
-            <div>gambar 1</div>
-            <div>gambar 2</div>   
+            <div style="font-size: 2em">Domestic x Kanojo</div>
+            <div style="font-size: 2em">ASHIAP</div>   
         </div>
-
-
-       
     </div>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/0YF8vecQWYs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
