--- a/week_06/index.html
+++ b/week_06/index.html
@@ -63,5 +63,17 @@
         </div>
     </div>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/0YF8vecQWYs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    <div>
+        <div style="font-size: 2em">Oom Jago</div>
+        <div style="font-size: 2em">Subscreb</div> 
+    </div>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/pKEcSUlAtKo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    <div>
+        <div style="font-size: 2em">Oom Jago</div>
+        <div style="font-size: 2em">Subscreb</div> 
+    </div>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/JYekURrDqNY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 </html>
