--- a/week_06/index.html
+++ b/week_06/index.html
@@ -25,7 +25,6 @@
                     display: inline-block">
             <img src="Anjing 2.jpg"
             style="width: 100%">
-            
         </div>
         <div style="width: 38%;
         display: inline-block;
@@ -34,28 +33,55 @@
             The meme is based on a 2010 photograph, and became popular in late 2013, being named as Know Your Meme's "top meme" of that year. A cryptocurrency based on Doge, the Dogecoin, was launched in December 2013, and the Shiba Inu has been featured on Josh Wise's NASCAR car as part of a sponsorship deal. Doge has also been referenced by members of the United States Congress, a safety video for Delta Air Lines, a Google Easter egg, and the video for the song "Word Crimes" by "Weird Al" Yankovic.
         </div>
 
-        <div>
-            <div>
-                <img style="width: 48%" src="./img/Anjing.jpg" alt="Anjing Bekerja">
-                    <div style="width: 38%;
-                                display: inline-block;
-                                font-size: 1.5em;
-                                font-family: 'Indie Flower', cursive">
-                        Doge profesional yang bekerja sebagai arsitek pembangunan
-
-                    </div>
-                </div>
-            <div>
-                <img style="width: 48%" src="./img/Anjing 3.jpg" alt="Santui Dong">
-                    <div style="width: 38%;
-                                display:inline-block;
-                                font-size: 1.5em;
-                                font-family: 'Indie Flower', cursive">
-                        Doge sedang santai setelah kelelahan bekerja
-                    </div> 
-            </div>
+    <div>
         
+    </div>
+
+        <div>
+            <div style="width: 47%; display: inline-block">
+                <img  style="width: 100%"
+                    src="./img/Anjing.jpg" alt="Anjing Bekerja"/>
+                <div style="width: 38%;
+                display: inline-block;
+                font-size: 1.5em;
+                font-family: 'Indie Flower', cursive">
+                    Doge profesional yang bekerja sebagai arsitek pembangunan
+                </div>
             </div>
+            <div style="width: 47%; display: inline-block" >
+                <img  style="width: 100%" src="./img/Anjing 3.jpg" alt="Santui Dong">
+                <div style="width: 38%;
+                display: inline-block;
+                font-size: 1.5em;
+                font-family: 'Indie Flower', cursive">
+                    Doge sedang santai setelah kelelahan bekerja
+                </div> 
+            </div>
+        </div>
+
+        <div>
+            <div style="width: 47%; display: inline-block">
+                <img  style="width: 100%"
+                    src="./img/anime.jpg" alt="Anjing Bekerja"/>
+                <div style="width: 38%;
+                display: inline-block;
+                font-size: 1.5em;
+                font-family: 'Indie Flower', cursive">
+                    Bukan Peliharaan H3H3
+                </div>
+            </div>
+            <div style="width: 47%; display: inline-block" >
+                <img  style="width: 100%" src="./img/itsuki.jpg" alt="Santui Dong">
+                <div style="width: 38%;
+                display: inline-block;
+                font-size: 1.5em;
+                font-family: 'Indie Flower', cursive">
+                    Best
+                </div> 
+            </div>
+        </div>
+
+
 
         <div>
             <div style="font-size: 2em">Domestic x Kanojo</div>
