--- a/week_06/index.html
+++ b/week_06/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,8 +9,12 @@
     <link href="https://fonts.googleapis.com/css?family=Saira+Stencil+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet">
 
-    <title>ANJENG ASU</title>
+<body background="./img/poux8.gif"> </body>
+<link rel="stylesheet" href="style.css">
+
+<title>ANJENG ASU</title>
 </head>
+
 <body>
     <div style="font-size: 2em" class="header">
         Logo
@@ -21,63 +26,58 @@
         <div style="font-size: 5cm;font-family: 'Saira Stencil One', cursive;">
             Error Code 404
         </div>
-        <div style="width: 48%;
-                    display: inline-block">
-            <img src="Anjing 2.jpg"
-            style="width: 100%">
+        <div class="gallery">
+            <img src="Anjing 2.jpg">
         </div>
-        <div style="width: 38%;
-        display: inline-block;
-        font-size: 1.5em;
-        font-family: 'Indie Flower', cursive">
-            The meme is based on a 2010 photograph, and became popular in late 2013, being named as Know Your Meme's "top meme" of that year. A cryptocurrency based on Doge, the Dogecoin, was launched in December 2013, and the Shiba Inu has been featured on Josh Wise's NASCAR car as part of a sponsorship deal. Doge has also been referenced by members of the United States Congress, a safety video for Delta Air Lines, a Google Easter egg, and the video for the song "Word Crimes" by "Weird Al" Yankovic.
+            <div class="gallery">
+                <div>
+                    The meme is based on a 2010 photograph, and became popular in late 2013, being named as Know Your Meme's
+                    "top meme" of that year. A cryptocurrency based on Doge, the Dogecoin, was launched in December 2013, and
+                    the Shiba Inu has been featured on Josh Wise's NASCAR car as part of a sponsorship deal. Doge has also been
+                    referenced by members of the United States Congress, a safety video for Delta Air Lines, a Google Easter
+                    egg, and the video for the song "Word Crimes" by "Weird Al" Yankovic.
+                </div>
+            </div>
+                         
+        <div style="font-size: 3em; text-align: center">
+            ANJING JAGO
         </div>
-
-    <div style="font-size: 3em">
-        ANJING JAGO
-    </div>
 
         <div>
-            <div style="width: 47%; display: inline-block">
-                <img  style="width: 100%"
-                    src="./img/Anjing.jpg" alt="Anjing Bekerja"/>
-                <div style="width: 38%;
-                display: inline-block;
-                font-size: 1.5em;
-                font-family: 'Indie Flower', cursive">
+            <div class="gallery">
+                <img src="./img/Anjing.jpg" alt="Anjing Bekerja" />
+                <div>
                     Doge profesional yang bekerja sebagai arsitek pembangunan
                 </div>
             </div>
-            <div style="width: 47%; display: inline-block" >
-                <img  style="width: 100%" src="./img/Anjing 3.jpg" alt="Santui Dong">
-                <div style="width: 38%;
-                display: inline-block;
-                font-size: 1.5em;
-                font-family: 'Indie Flower', cursive">
+            <div class="gallery">
+                <img src="./img/Anjing 3.jpg" alt="Santui Dong">
+                <div>
                     Doge sedang santai setelah kelelahan bekerja
-                </div> 
+                </div>
             </div>
         </div>
 
         <div>
-            <div style="width: 47%; display: inline-block">
-                <img  style="width: 100%"
-                    src="./img/anime.jpg" alt="Anjing Bekerja"/>
-                <div style="width: 38%;
-                display: inline-block;
-                font-size: 1.5em;
-                font-family: 'Indie Flower', cursive">
-                    Bukan Peliharaan H3H3
+            <div style="width: 28%; display: inline-block">
+                <div class="tenor-gif-embed" data-postid="13578493" data-share-method="host" data-width="100%"
+                    data-aspect-ratio="1.7785714285714287"><a
+                        href="https://tenor.com/view/itsuki-pout-itsuki-nakano-gotoubun-no-hanayome-quintessential-quintuplets-gif-13578493">Itsuki
+                        Pout GIF</a> from <a href="https://tenor.com/search/itsuki-gifs">Itsuki GIFs</a></div>
+                <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+                <div class="gallery">
+                    WOW
                 </div>
             </div>
-            <div style="width: 47%; display: inline-block" >
-                <img  style="width: 100%" src="./img/itsuki.jpg" alt="Santui Dong">
-                <div style="width: 38%;
-                display: inline-block;
-                font-size: 1.5em;
-                font-family: 'Indie Flower', cursive">
+            <div style="width: 28%; display: inline-block">
+                <div class="tenor-gif-embed" data-postid="13320234" data-share-method="host" data-width="100%"
+                    data-aspect-ratio="1.0591715976331362"><a
+                        href="https://tenor.com/view/itsuki-nakano-annoyed-gif-13320234">Itsuki Nakano GIF</a> from <a
+                        href="https://tenor.com/search/itsuki-gifs">Itsuki GIFs</a></div>
+                <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+                <div class="gallery">
                     Best
-                </div> 
+                </div>
             </div>
         </div>
 
@@ -85,21 +85,25 @@
 
         <div>
             <div style="font-size: 2em">Domestic x Kanojo</div>
-            <div style="font-size: 2em">ASHIAP</div>   
+            <div style="font-size: 2em">ASHIAP</div>
         </div>
     </div>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/0YF8vecQWYs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/0YF8vecQWYs" frameborder="0"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     <div>
         <div style="font-size: 2em">Oom Jago</div>
-        <div style="font-size: 2em">Subscreb</div> 
+        <div style="font-size: 2em">Subscreb</div>
     </div>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/AVnjK6kPjhM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/AVnjK6kPjhM" frameborder="0"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
     <div>
         <div style="font-size: 2em">Oom Jago</div>
-        <div style="font-size: 2em">Subscreb</div> 
+        <div style="font-size: 2em">Subscreb</div>
     </div>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/JYekURrDqNY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/JYekURrDqNY" frameborder="0"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
+
 </html>
