--- a/week_06/index.html
+++ b/week_06/index.html
@@ -29,16 +29,18 @@
         <div class="gallery">
             <img src="Anjing 2.jpg">
         </div>
-            <div class="gallery">
-                <div>
-                    The meme is based on a 2010 photograph, and became popular in late 2013, being named as Know Your Meme's
-                    "top meme" of that year. A cryptocurrency based on Doge, the Dogecoin, was launched in December 2013, and
-                    the Shiba Inu has been featured on Josh Wise's NASCAR car as part of a sponsorship deal. Doge has also been
-                    referenced by members of the United States Congress, a safety video for Delta Air Lines, a Google Easter
-                    egg, and the video for the song "Word Crimes" by "Weird Al" Yankovic.
-                </div>
+        <div class="gallery">
+            <div>
+                The meme is based on a 2010 photograph, and became popular in late 2013, being named as Know Your Meme's
+                "top meme" of that year. A cryptocurrency based on Doge, the Dogecoin, was launched in December 2013,
+                and
+                the Shiba Inu has been featured on Josh Wise's NASCAR car as part of a sponsorship deal. Doge has also
+                been
+                referenced by members of the United States Congress, a safety video for Delta Air Lines, a Google Easter
+                egg, and the video for the song "Word Crimes" by "Weird Al" Yankovic.
             </div>
-                         
+        </div>
+
         <div style="font-size: 3em; text-align: center">
             ANJING JAGO
         </div>
@@ -84,8 +86,8 @@
 
 
         <div>
-            <div style="font-size: 2em">Domestic x Kanojo</div>
-            <div style="font-size: 2em">ASHIAP</div>
+            <div style="font-size: 2em">Lagu Doang</div>
+            <div style="font-size: 2em">Crying for Rain</div>
         </div>
     </div>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/0YF8vecQWYs" frameborder="0"
