--- a/week_06/index.html
+++ b/week_06/index.html
@@ -16,6 +16,8 @@
 </head>
 
 <body>
+    <link rel="stylesheet" href="./../week_04/">
+    
     <div style="font-size: 2em" class="header">
         Logo
         <a href="www.google.com">Google</a>
