--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <a style="font-size: 2em; margin: 0 0.5em;" href="./week_04/">week_04</a>
     <a style="font-size: 2em; margin: 0 0.5em;" href="./week_06/">week_06</a>
-
+    <a style="font-size: 2em; margin: 0 0.5em;" href="./week_06/">week_10</a>
 
 </body>
 
