--- a/week_13/index.html
+++ b/week_13/index.html
@@ -23,7 +23,7 @@
 
 </head>
 
-<body style="background-color: salmon">
+<body style="background-color: #ffffff">
     <div class="container">
         tulisan dengan tag <b> b / bold </b>
         <br>
@@ -52,7 +52,7 @@
         <div style="
             width: 48%;
             display: inline-block;
-            border: 1px solid red;
+            border: 1px solid blue;
             padding: 1 em;">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
@@ -64,7 +64,7 @@
         <div style="
             width: 48%;
             display: inline-block;
-            border: 1px solid red;
+            border: 1px solid blue;
             padding: 1 em;">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
@@ -72,7 +72,7 @@
             nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
             anim id est laborum.
         </div>
-        
+
     </div>
 
 
